--- a/myportfolio/package.json
+++ b/myportfolio/package.json
@@ -1,5 +1,6 @@
 {
   "name": "myportfolio",
+  "homepage": "http://myportfolio-site-prasanth.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
